# osu-db-manager

./: .gitattributes  .gitignore  Cargo.toml  README.md  auro-osu!.db  bigger-tama-osu!.db  even-bigger-tama-osu!.db  jminn-osu!.db  new-auro-scores.db  old-auro-scores.db  rtrx-scores.db  tama-osu!.db
src/: argument.rs  db_masks.rs  deserialize_primitives.rs  help.rs  main.rs  maybe_deserialize_primitives.rs  osu_db_bench.rs  primitives_bench.rs  read_error.rs
src/databases/: collection.rs  database.rs  load.rs  merge.rs  mod.rs  osu.rs  scores.rs
src/databases/collection/: collection.rs  collectiondb.rs  mod.rs  partial_collection.rs  partial_collectiondb.rs
src/databases/complete/: collection.rs  mod.rs  scores.rs
src/databases/osu/: beatmap.rs  mod.rs  osudb.rs  partial_beatmap.rs  partial_osudb.rs  primitives.rs  versions.rs
src/databases/partial/: partial_osu.rs
src/databases/scores/: mod.rs  partial_score.rs  partial_scoresdb.rs  partial_scoresdb_beatmap.rs  score.rs  scoresdb.rs  scoresdb_beatmap.rs
src/load_settings/: macros.rs  mod.rs  query.rs
src/load_settings/collection/: collection_load_settings.rs  collectiondb_load_settings.rs  mod.rs
src/load_settings/osu/: beatmap_load_settings.rs  mod.rs  osudb_load_settings.rs  query.rs  show.rs
src/load_settings/scores/: mod.rs  score_load_settings.rs  scoresdb_beatmap_load_settings.rs  scoresdb_load_settings.rs
src/masks/: collection_mask.rs  mask.rs  mod.rs  osu_mask.rs  scores_mask.rs
src/partial_databases/: mod.rs
src/query/: macros.rs  mod.rs  query.rs  query_osudb.rs
src/query/collection/: collection_query.rs  collectiondb_query.rs  mod.rs
src/query/osu/: beatmap_query.rs  mod.rs  osudb_query.rs
src/query/scores/: mod.rs
