[package]
name = "osu-db-manager"
version = "0.1.0"
authors = ["auro"]
edition = "2018"

[dependencies]
num_cpus = "1.10.0"
clap = {version = "2.33.0", features = ["suggestions"]}

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "osu_db_bench"
harness = false
path = "src/osu_db_bench.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false