[package]
name = "osu-db-manager"
version = "0.1.0"
authors = ["auro"]
edition = "2018"

[dependencies]
clap = {version = "2.33.0", features = ["suggestions"]}
rand = "0.7.2"
chrono = "0.4.9"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "osu_db_bench"
harness = false
path = "src/osu_db_bench.rs"

[[bench]]
name = "primitives_bench"
harness = false
path = "src/primitives_bench.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false